--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "WorldGuard"]
-	path = WorldGuard
-	url = https://github.com/EngineHub/WorldGuard
+[submodule "Quests"]
+	path = Quests
+	url = https://github.com/PikaMug/Quests
