Try add localelib

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,12 @@ jobs:
       run: bash -c "chmod +x script.sh"
 
     - name: Install LocaleLib for Folia
-      run : mvn install:install-file -Dfile=libs/LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
+      run: |
+        mkdir -p temp_lib_install
+        cp libs/LocaleLib-4.0.0-Folia.jar temp_lib_install/
+        cd temp_lib_install
+        mvn install:install-file -Dfile=LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
+        cd ..
 
     - name: Update upstream and apply patches
       shell: bash
