--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
         distribution: 'temurin'
 
     - name: Grant execute permission to script
-      run: bash -c "chmod +x script.sh"
+      run: chmod +x script.sh
 
     - name: Install LocaleLib for Folia
       run: |
