revert and add fake pom.xml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -24,14 +24,15 @@ jobs:
         distribution: 'temurin'
 
     - name: Grant execute permission to script
-      run: chmod +x script.sh
+      run: bash -c "chmod +x script.sh"
 
     - name: Install LocaleLib for Folia
       run: |
         mkdir -p temp_lib_install
+        echo "<project><modelVersion>4.0.0</modelVersion></project>" > temp_lib_install/pom.xml
         cp libs/LocaleLib-4.0.0-Folia.jar temp_lib_install/
         cd temp_lib_install
-        mvn install:install-file -N -Dfile=LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
+        mvn install:install-file -Dfile=LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
         cd ..
 
     - name: Update upstream and apply patches
