--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Install LocaleLib for Folia
       run: |
         mkdir -p temp_lib_install
-        cp libs/LocaleLib-4.0.0-Folia.jar temp_lib_install/
+        cp libs/LocaleLib.jar temp_lib_install/
         cp libs/pom.xml temp_lib_install/
         cd temp_lib_install
-        mvn install:install-file -Dfile=LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
+        mvn install:install-file -Dfile=LocaleLib.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
         cd ..
 
     - name: Update upstream and apply patches
