--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         git clone https://github.com/Euphillya/LocaleLib-Folia
         cd LocaleLib-Folia
         mvn clean compile package
-        mvn install:install-file -Dfile=target/LocaleLib-4.0.0-Folia.jar -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
+        mvn install:install-file -Dfile="target/LocaleLib-4.0.0-Folia.jar" -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
         cd ..
 
     - name: Update upstream and apply patches
