--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,18 @@ jobs:
       run: bash -c "chmod +x script.sh"
 
     - name: Install LocaleLib for Folia
+      shell: bash
       run: |
-        git clone https://github.com/Euphillya/LocaleLib-Folia
-        cd LocaleLib-Folia
-        mvn clean compile package
-        mvn install:install-file -Dfile="target/LocaleLib-4.0.0-Folia.jar" -DgroupId=fr.euphyllia -DartifactId=localelib -Dversion=4.0.0-Folia -Dpackaging=jar
-        cd ..
+       git clone https://github.com/Euphillya/LocaleLib-Folia
+       cd LocaleLib-Folia
+       mvn clean compile package
+       mvn install:install-file \
+         -Dfile="target/LocaleLib-4.0.0-Folia.jar" \
+         -DgroupId="fr.euphyllia" \
+         -DartifactId="localelib" \
+         -Dversion="4.0.0-Folia" \
+         -Dpackaging="jar"
+       cd ..
 
     - name: Update upstream and apply patches
       shell: bash
